--- a/app/views/wishlist/index.html.erb
+++ b/app/views/wishlist/index.html.erb
@@ -8,9 +8,9 @@
               <span class="glyphicon glyphicon-remove" aria-hidden="false"></span>
             </a>
           </div>
-          <div class="blocked order-title"><%= wi.name%></div>
+          <div class="blocked order-title"><%= wi.name.capitalize%></div>
           <div class="blocked order-image"><%= link_to (image_tag wi.avatar.url(:medium)), product_path(wi.id) %></div>
-          <div class="blocked order-footer"><%= wi.description%></div>
+          <div class="blocked order-footer"><%= truncate(wi.description, :length => 30)%></div>
         </div>
     </div>
 <% end %>
