--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -19,6 +19,14 @@
       </div>
     <% end %>
 
+    <%= f.form_group :condition do |f| %>
+      <%= f.label :condition, class: 'form-label col-md-2' %>
+      <div class='col-md-8'>
+        <%= f.text_field :condition, class: 'form-control' %>
+        <%= f.error_messages %>
+      </div>
+    <% end %>
+
     <%= f.form_group :description do |f| %>
         <%= f.label :description, class: 'form-label col-md-2' %>
         <div class='col-md-8'>
@@ -53,4 +61,3 @@
 
 
 <% end %>
-
