--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -19,6 +19,7 @@
 
     <div class="show_block">
       <span class="show_title"><%= @product.name %></span>
+      <span><%= @product.condition %></span>
       <span><%= number_to_currency(@product.price) %></span>
       <span>Seller: <%= @product.user.first_name || @product.user.email %></span>
       <span><%= @product.description %></span>
